--- a/client/src/Cloudmersive.APIClient.NETCore.Barcode/Cloudmersive.APIClient.NETCore.Barcode.csproj
+++ b/client/src/Cloudmersive.APIClient.NETCore.Barcode/Cloudmersive.APIClient.NETCore.Barcode.csproj
@@ -14,8 +14,8 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
     <RootNamespace>Cloudmersive.APIClient.NETCore.Barcode</RootNamespace>
-    <Version>1.2.4</Version>
-  <PackageIconUrl>https://cloudmersive.com/images/cmsdk_core.png</PackageIconUrl><PackageLicenseExpression>Apache-2.0</PackageLicenseExpression></PropertyGroup>
+    <Version>1.2.5</Version>
+  <PackageIconUrl>https://cloudmersive.com/images/cmsdk_core.png</PackageIconUrl><PackageLicenseExpression>Apache-2.0</PackageLicenseExpression><PackageProjectUrl>https://cloudmersive.com/barcode-api</PackageProjectUrl></PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="105.1.0" />
